[gd_scene load_steps=5 format=3 uid="uid://bojskohbtf8ng"]

[ext_resource type="Script" uid="uid://clv6i26stfmv4" path="res://scripts/lever.gd" id="1_qxmkn"]
[ext_resource type="Texture2D" uid="uid://es554wt6etih" path="res://assets/sprites/lever.png" id="2_qxmkn"]
[ext_resource type="Texture2D" uid="uid://cvcihibey5543" path="res://assets/sprites/leverswitched.png" id="3_8di2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hol4"]
size = Vector2(10, 20)

[node name="Lever" type="Area2D"]
script = ExtResource("1_qxmkn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_0hol4")

[node name="Lever" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-9.536743e-07, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_qxmkn")

[node name="LeverSwitched" type="Sprite2D" parent="CollisionShape2D"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_8di2w")

[connection signal="body_entered" from="." to="." method="_on_Button_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
